Fix:overlapping of the button

--- a/app/styles/pages/public-event.scss
+++ b/app/styles/pages/public-event.scss
@@ -185,3 +185,7 @@
 .event-map > iframe.g-map {
   height: 300px;
 }
+
+button.ui.blue.button.right.labeled.icon.small.right.aligned {
+  margin-top: 5px;
+}
